<resources>
    <string name="app_name">ToDoApp</string>
    <string name="title">Мои дела</string>
    <string name="number_of_completed">Выполнено - %1$s</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="hint_adding">Что надо сделать...</string>
    <string name="important">Важность</string>
    <string name="deathline">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="New">Новое</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="repeated">Повторить</string>
    <string-array name="importance">
        <item>Нет</item>
        <item>Низкий</item>
        <item>Высокий</item>
    </string-array>
    <string name="importance_low">Низкий</string>
    <string name="importance_basic">Нет</string>
    <string name="importance_important">Высокий</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_deleted">Заметка удалена</string>

</resources>