<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.AddingFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/back_primary"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/back_primary">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

                <ImageView
                    android:id="@+id/close_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|left"
                    android:layout_marginStart="23dp"
                    android:src="@drawable/ic_close"
                    app:tint="?attr/label_primary" />


                <TextView
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginEnd="23dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/save"
                    android:textColor="?attr/color_blue"
                    android:textSize="@dimen/Body" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroll_adding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="64dp"
                android:background="?attr/back_primary"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_adding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_corners"
                    android:elevation="5dp"
                    android:gravity="top"
                    android:hint="@string/hint_adding"
                    android:inputType="textMultiLine"
                    android:minLines="4"

                    android:padding="@dimen/pudding_medium" />

                <TextView
                    android:id="@+id/textview_important"
                    style="@style/TextAppearance.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pudding_large"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/important"
                    android:textColor="?attr/label_primary" />

                <Spinner
                    android:id="@+id/spinner_adding"
                    style="@style/TextAppearance.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pudding_large"
                    android:background="@null"
                    android:entries="@array/importance" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="?attr/support_separator" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchdeatline"
                    style="@style/TextAppearance.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pudding_large"
                    android:text="@string/deathline"
                    android:textColor="?attr/label_primary"
                    android:theme="@style/switch_adding"

                    />

                <TextView
                    android:id="@+id/textview_calendardate"
                    style="@style/TextAppearance.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="дата"
                    android:textColor="@color/color_light_blue"
                    android:visibility="invisible" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="@dimen/pudding_large"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="@dimen/pudding_large"
                    android:background="?attr/support_separator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_delete" />

                    <TextView
                        android:id="@+id/delete_button"
                        style="@style/TextAppearance.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/delete"
                        android:textColor="@color/color_light_red" />
                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>